@@ -1,7 +1,8 @@
 v1.10.1 (Expected around 2024-11-01)
 ====================
 
-- Propagate general plotting keywords in Potential.plot/plotPotentials.
+- Propagate general plotting keywords in Potential.plot/plotPotentials. Also allow
+  plotting potentials on physical axes.
 
 - Added the generalized particle-spray model as galpy.df.basestreamspraydf with two
   subclasses: chen24spraydf and fadal15spraydf. Enabled integrating orbits of stream
